--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".viewmodel.ExampleApplication">
+        android:theme="@style/AppTheme">
         <activity android:name=".view.ui.MainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden">
